--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -14,17 +14,19 @@
   <![endif]-->
 </head>
 
-<body>
-
-
-Services
-Product
-Vision
-Features
-About
-Contact
-
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <body>
+    <div class="container">
+      <header>
+        <nav>
+          <a href="#">Services</a>
+          <a href="#">Product</a>
+          <a href="#">Vision</a>  
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </header>
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
@@ -101,7 +103,7 @@ Great thing
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
 Copyright Great Idea! 2018
-
+    </div>
 </body>
 
 </html>
