--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -31,7 +31,7 @@
         </nav>
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
       </header>
-<!-- First big picture -->
+      <!-- First big picture -->
       <div>
         <img
           class="services-header-img"
@@ -39,52 +39,115 @@
           alt="Our services header image"
         />
       </div>
-      Services Our services provide the best digital value in nulla suscipit
-      interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit
-      amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
-      Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-      faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
-      Digital Design Nulla suscipit interdum diam at maximus. Proin vitae tellus
-      rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-      justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus
-      sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-      facilisis iaculis. Learn More UX / UI Nulla suscipit interdum diam at
-      maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
-      tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
-      justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-      pellentesque eleifend. Mauris euismod facilisis iaculis. Learn More
-      Digital Marketing Nulla suscipit interdum diam at maximus. Proin vitae
-      tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur
-      feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-      finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-      facilisis iaculis. Learn More Web Development Nulla suscipit interdum diam
-      at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
-      tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
-      justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-      pellentesque eleifend. Mauris euismod facilisis iaculis. Learn More iOS
-      Development Nulla suscipit interdum diam at maximus. Proin vitae tellus
-      rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-      justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus
-      sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-      facilisis iaculis. Learn More Android Development Nulla suscipit interdum
-      diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
-      iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
-      cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
-      pellentesque eleifend. Mauris euismod facilisis iaculis. Learn More Some
-      Facts About Our Services Nulla suscipit interdum diam at maximus. Proin
-      vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
-      consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu
-      consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis. Awesome thing Amazing thing
-      Cool thing Great thing
+      <!-- Services section -->
+      <section>
+        <h2>Services</h2>
+        <p>
+          Our services provide the best digital value in nulla suscipit interdum
+          diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
+          iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
+          Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+        </p>
+      </section>
+      <!-- Six Boxes with buttons -->
+      <section>
+        <h2>Digital Design</h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
 
-      <img
-        class="services-info-img"
-        src="img/services-info.png"
-        alt="one of our employees hard at work"
-      />
+      <section>
+        <h2>UX / UI</h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
 
-      Copyright Great Idea! 2018
+      <section>
+        <h2>Digital Marketing</h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
+      <h2>Web Development</h2>
+      <section>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
+      <section>
+        <h2>iOS Development</h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
+      <section>
+        <h2>Android Development</h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+          euismod facilisis iaculis.
+        </p>
+        <button>Learn More</button>
+      </section>
+      <!-- Bottom Section -->
+      <div class="bottom-section">
+        <section>
+          <h2>Some Facts About Our Services</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <ul>
+            <li>Awesome thing</li>
+            <li>Amazing thing</li>
+            <li>Cool thing</li>
+            <li>Great thing</li>
+          </ul>
+        </section>
+
+        <section>
+          <img
+            class="services-info-img"
+            src="img/services-info.png"
+            alt="one of our employees hard at work"
+          />
+        </section>
+      </div>
+      <!-- Footer -->
+      <footer>Copyright Great Idea! 2018</footer>
     </div>
   </body>
 </html>
