--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -40,7 +40,7 @@
         />
       </div>
       <!-- Services section -->
-      <section>
+      <section class="top-box">
         <h2>Services</h2>
         <p>
           Our services provide the best digital value in nulla suscipit interdum
@@ -51,74 +51,75 @@
         </p>
       </section>
       <!-- Six Boxes with buttons -->
-      <section>
-        <h2>Digital Design</h2>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
-
-      <section>
-        <h2>UX / UI</h2>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
-
-      <section>
-        <h2>Digital Marketing</h2>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
-      <h2>Web Development</h2>
-      <section>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
-      <section>
-        <h2>iOS Development</h2>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
-      <section>
-        <h2>Android Development</h2>
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-          justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-          finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-          euismod facilisis iaculis.
-        </p>
-        <button>Learn More</button>
-      </section>
+      <div class="all-info"><section class="info-box">
+          <h2>Digital Design</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section>
+  
+        <section class="info-box">
+          <h2>UX / UI</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section>
+  
+        <section class="info-box">
+          <h2>Digital Marketing</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section>
+        
+        <section class="info-box">
+            <h2>Web Development</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section>
+        <section class="info-box">
+          <h2>iOS Development</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section>
+        <section class="info-box">
+          <h2>Android Development</h2>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
+        </section></div>
       <!-- Bottom Section -->
       <div class="bottom-section">
         <section>
