--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -41,8 +41,8 @@
       </div>
       <!-- Services section -->
       <section class="top-box">
-        <h2>Services</h2>
-        <p>
+        <h1>Services</h1>
+        <p class="first-para">
           Our services provide the best digital value in nulla suscipit interdum
           diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
           iaculis tortor. Mauris consectetur feugiat justo quis aliquet.
