--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -40,7 +40,7 @@
         />
       </div>
       <!-- Services section -->
-      <section class="top-box">
+      <section class="top-section">
         <h1>Services</h1>
         <p class="first-para">
           Our services provide the best digital value in nulla suscipit interdum
