add CSS to tweak page

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -123,8 +123,8 @@
       <!-- Bottom Section -->
       <div class="bottom-section">
         <section>
-          <h2>Some Facts About Our Services</h2>
-          <p>
+          <h2 class="bottom-section-h2">Some Facts About Our Services</h2>
+          <p class="bottom-section-p">
             Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
             accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
             justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
